--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,22 @@
           </classpathContainers>
         </configuration>
       </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-jar-plugin</artifactId>
+          <configuration>
+            <archive>
+              <manifest>
+                <mainClass>dadacore.Main</mainClass>
+                <packageName>dadacore</packageName>
+              </manifest>
+              <manifestEntries>
+                <mode>development</mode>
+                <url>${pom.url}</url>
+              </manifestEntries>
+            </archive>
+          </configuration>
+        </plugin>
     </plugins>
   </build>
   <reporting>
