--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,17 @@
       <version>4.8.2</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.3</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.scalatra</groupId>
+      <artifactId>scalatra_2.8.1</artifactId>
+      <version>2.0.0.M2</version>
+    </dependency>
   </dependencies>
 
   <build>
