--- a/pom.xml
+++ b/pom.xml
@@ -38,11 +38,21 @@
       <version>4.8.2</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
+<!--    <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
       <version>2.3</version>
       <scope>provided</scope>
+    </dependency>-->
+      <dependency>
+       <groupId>org.eclipse.jetty</groupId>
+       <artifactId>jetty-servlet</artifactId>
+       <version>8.0.0.M2</version>
+      </dependency>
+    <dependency>
+     <groupId>org.eclipse.jetty</groupId>
+     <artifactId>jetty-server</artifactId>
+     <version>8.0.0.M2</version>
     </dependency>
     <dependency>
       <groupId>org.scalatra</groupId>
@@ -110,6 +120,11 @@
           </execution>
         </executions>
       </plugin>
+<!--      <plugin>
+        <groupId>org.mortbay.jetty</groupId>
+        <artifactId>maven-jetty-plugin</artifactId>
+        <version>6.1.17</version>
+      </plugin>-->
     </plugins>
   </build>
   <reporting>
