--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,15 @@
 /learnlog.txt
 /learnlog.log
 \#*\#
-
-
+*~
+lib_managed/
+project/boot/
+project/build/target/
+project/plugins/project/build.properties
+src_managed/
+target/
+*.eml
+*.iml
+*.ipr
+*.iws
+.*.sw?
